# arprtclubenv

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  client.py  demo_email_intro.py  models.py  openenv.yaml  pyproject.toml  simulate_5_email_campaign.py  simulate_brand_campaign.py  simulate_email_variants.py
.github/workflows/: sync-to-hf-space.yml
config/: brand_instructions.txt  brand_persona.json  marketer_judge_persona.json
openenv_clothing_brand_ctr_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: Dockerfile  __init__.py  app.py  clothing_brand_ctr_env_environment.py
web/: index.html
